--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
 
     <application
         android:allowBackup="true"
@@ -12,6 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ControlMaterial11"
         tools:targetApi="31">
+
 
         <activity
             android:name=".LoginActivity"
@@ -43,6 +46,10 @@
 
         <activity
             android:name=".InicioActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".SincronizarActivity"
             android:exported="false" />
 
 
